--- a/frontend/frontend/src/App.css
+++ b/frontend/frontend/src/App.css
@@ -1,38 +1,24 @@
+/* App.css */
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
-}
+  text-align: center;
+  padding: 20px;
+  height: 100vh; /* 100% of the viewport height */
 
-.App-link {
-  color: #61dafb;
+  background-image: url('https://wallpapercave.com/wp/PLZ2aLV.jpg');
+  background-size: cover;
+  background-position: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn.btn-primary.mb-3 {
+  margin-top: 8px; 
 }
